--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,3 @@
-== README
+== TYT
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+This is a mock website for the Toronto Youth Teatre. I decided to build it with Rails so that I could get something up and running quickly. Not sure what sort of functionality they'll need...
