--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
 == TYT
 
-This is a mock website for the Toronto Youth Teatre. I decided to build it with Rails so that I could get something up and running quickly.
+This is a mock website for the Toronto Youth Teatre. 
